<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.UserRegister">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#512da8"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="260dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/register" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:fontFamily="@font/gotham"
                        android:text="Register with Us"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp" />

                </RelativeLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="-65dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etFirstName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/first_name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etLastName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/last_name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etNIC"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/nic"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etPhone"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/buttonshape"
                    android:backgroundTint="#0052A8"
                    android:fontFamily="@font/calibri"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginBottom="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:text="Already Have an Account? "
                        android:textAlignment="center"
                        android:textColor="#686868"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gotham"
                        android:text="Sign In Here"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>


        </ScrollView>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>